--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "fluffy"
 version = "0.1.0"
-authors = ["bobbin <jellybobbin@gmail.com>"]
+authors = ["JellyBobbin <jellybobbin@gmail.com>"]
 edition = "2018"
 
 
